# rig-llama-cpp

./: Cargo.toml
examples/: completion.rs  embeddings.rs  kv_cache.rs  reload.rs  stream_chat.rs  stream_chat_tools.rs  streaming.rs  structured_output.rs  vision.rs
examples/helper/: stream_out.rs  time.rs
src/: client.rs  embedding.rs  lib.rs  loader.rs  parsing.rs  request.rs  sampling.rs  types.rs  worker.rs
tests/e2e/: common.rs  embedding.rs  gemma.rs  qwen.rs
